--- a/index.html
+++ b/index.html
@@ -357,6 +357,78 @@
           <div class="card-title">Festival</div>
         </div>
       </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="media-wrapper">
+          <video src="https://www.w3schools.com/html/movie.mp4" muted onclick="openModal(this.src, 'video')"></video>
+        </div>
+        <div class="card-content">
+          <div class="card-title">Festival</div>
+        </div>
+      </div>
     </div>
   </div>
 
